--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,20 +11,20 @@
 }
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #080b0a;
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0a0a0a !important;
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #080b0a;
+  color: #ffffff;
   font-family: "Rethink Sans", sans-serif;
   overflow-x: hidden;
 }
